Not expecting timeout upon write, and test improvements